--- a/README.Rmd
+++ b/README.Rmd
@@ -14,14 +14,15 @@ output: github_document
 ___
 
 A `symbolicQspray` object represents a multivariate polynomial whose 
-coefficients are fractions of polynomials. For example:
+coefficients are fractions of polynomials with rational coefficients. 
+For example:
 
 ```{r, message=FALSE, collapse=TRUE}
 library(symbolicQspray)
 f <- function(a1, a2, X1, X2, X3) {
   (a1/(a2^2+1)) * X1^2*X2  +  (a2+1) * X3  +  a1/a2
 }
-# "exterior" variables, occuring in the coefficients:
+# "exterior" variables, the ones occuring in the coefficients:
 a1 <- qlone(1)
 a2 <- qlone(2)
 # "main" variables:
@@ -110,7 +111,7 @@ You can change the way a `symbolicQspray` is printed by using
 ```{r, collapse=TRUE}
 showSymbolicQsprayOption(Qspray, "a") <- "x"
 showSymbolicQsprayOption(Qspray, "showMonomial") <- 
-  showMonomialXYZ(c("A", "B", "C"), collapse = ".")
+  showMonomialXYZ(c("A", "B", "C"))
 showSymbolicQsprayOption(Qspray, "quotientBar") <- " / "
 Qspray
 ```
@@ -123,16 +124,11 @@ When this is possible, the result of an arithmetic operation between two
 Qspray + Q
 ```
 
-Well, not perfect yet... That should work in this case. 
-Let's try something else:
 
-```{r, collapse=TRUE}
-Qspray <- Qspray + qlone(3)
-showSymbolicQsprayOption(Qspray, "a") <- "x"
-showSymbolicQsprayOption(Qspray, "showMonomial") <- 
-  showMonomialXYZ(c("A", "B", "C"), collapse = ".")
-showSymbolicQsprayOption(Qspray, "quotientBar") <- " / "
-Qspray
-Qspray + Q
-```
+## Application to Jack polynomials
 
+The **symbolicQspray** package is used by the 
+[**jack**](https://github.com/stla/jackR) package to compute the Jack 
+polynomials. The Jack polynomials are exactly the polynomials 
+represented by the `symbolicQspray` objects: their coefficients are fractions 
+of polynomials by definition, of one variable: the Jack parameter.
