--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: github_document
 ---
 
-***Symbolic multivariate polynomials.*** 
+***Multivariate polynomials with symbolic coefficients.*** 
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/stla/symbolicQspray/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/stla/symbolicQspray/actions/workflows/R-CMD-check.yaml)
@@ -22,7 +22,7 @@ library(symbolicQspray)
 f <- function(a1, a2, X1, X2, X3) {
   (a1/(a2^2+1)) * X1^2*X2  +  (a2+1) * X3  +  a1/a2
 }
-# "exterior" variables, the ones occuring in the coefficients:
+# "exterior" variables, the ones occurring in the coefficients:
 a1 <- qlone(1)
 a2 <- qlone(2)
 # "main" variables:
@@ -52,63 +52,53 @@ Qspray^2 - 2*Qspray + 1
 ## Evaluating a `symbolicQspray`
 
 Substituting the "exterior" variables (the variables occurring in the ratios of 
-polynomials) yields another `symbolicQspray`:
+polynomials) yields a `qspray`:
 
 ```{r, message=FALSE, collapse=TRUE}
 a <- c(2, "3/2")
-( Q <- evalSymbolicQspray(Qspray, a = a) )
+( qspray <- evalSymbolicQspray(Qspray, a = a) )
 ```
-
-This is discutable actually: this polynomial has rational coefficients, so 
-one could consider it is a `qspray`. But on the other hand, one can consider 
-that the polynomial variables `X`, `Y` and `Z` have not changed and still 
-represent some indeterminate `ratioOfQsprays` fractions. Comments ?..
 
 Substituting the "main" variables yields a `ratioOfQsprays` object:
 
 ```{r, message=FALSE, collapse=TRUE}
-X <- gmp::as.bigq(c(4, 3, "2/5"))
+X <- c(4, 3, "2/5")
 ( ratioOfQsprays <- evalSymbolicQspray(Qspray, X = X) )
 ```
 
-Actually we can more generally use some `ratioOfQsprays` objects for the 
-values of `X`, since a `symbolicQspray` object is a polynomial with 
-`ratioOfQsprays` coefficients. We will do and discuss that, just after checking 
-the consistency:
+There is a discutable point here. A `symbolicQspray` object represents a 
+polynomial with `ratioOfQsprays` coefficients. So one can consider 
+that the polynomial variables `X`, `Y` and `Z` represent some indeterminate
+`ratioOfQsprays` fractions, and that it should be possible to replace them 
+with `ratioOfQsprays` objects. However this is not allowed.
+We will discuss that, just after checking the consistency:
 
 ```{r, message=FALSE, collapse=TRUE}
 evalSymbolicQspray(Qspray, a = a, X = X)
-evalSymbolicQspray(Q, X = X)
+evalQspray(qspray, X)
 evalRatioOfQsprays(ratioOfQsprays, a)
-f(gmp::as.bigq(a[1]), gmp::as.bigq(a[2]), X[1], X[2], X[3])
+a <- gmp::as.bigq(a); X <- gmp::as.bigq(X)
+f(a[1], a[2], X[1], X[2], X[3])
 ```
 
-Now let's use some `ratioOfQsprays` objects for the values of `X`:
-
-```{r, message=FALSE, collapse=TRUE}
-X <- list(
-  qlone(1)/(1+qlone(1)), qlone(2)/qlone(1)^2, (qlone(2) + qlone(3))/qlone(1)
-)
-evalSymbolicQspray(Qspray, a = a, X = X)
-evalSymbolicQspray(Q, X = X)
-```
-
-This is consistent, but again, there's a discutable point here: are we allowed 
-to use `qlone(3)` (that is, `a3`) in the values of `X`, since the coefficients 
-of `Qspray` involve `a1` and `a2` only? Here we cannot know: only the context 
-can tell us in which space the coefficients of `Qspray` are living.
-
-Also note that evaluating the `ratioOfQsprays` object 
-`evalSymbolicQspray(Qspray, X = X)` at `a` makes no sense...
+Now let's turn to our promised discussion. Why is replacing the values of the 
+polynomial variables with some `ratioOfQsprays` objects not allowed?
 
 Actually my motivation to do this package was inspired by the 
 **Jack polynomials**. In the context of Jack polynomials, the variables 
 `X`, `Y` and `Z` represent indeterminate *numbers*, and the coefficients 
 are *numbers depending on a parameter* (the Jack parameter), and it turns out 
-that they are fractions of polynomials of this parameter. So in this context, 
-the answers to the above questions are clear: we don't have to replace the 
-variables `X`, `Y` and `Z` with `rationalQsprays` objects! 
-Maybe I will restrict this function to such a context in the future...
+that they are fractions of polynomials of this parameter. 
+So I consider that a `symbolicQspray` is *not* a polynomial on the field 
+of fractions of polynomials: I consider it is a polynomial with 
+*rational coefficients depending on some parameters*. 
+
+By the way, I'm wondering whether I should rename `symbolicQspray` to 
+`parametricQspray`. Comments?..
+
+Also note that evaluating the `ratioOfQsprays` object 
+`evalSymbolicQspray(Qspray, X = X)` at `a` would make no sense if we took 
+some `ratioOfQsprays` objects for the values of `X`.
 
 
 ## Querying a `symbolicQspray` 
