--- a/README.Rmd
+++ b/README.Rmd
@@ -233,6 +233,17 @@ JacobiPolynomial <- function(n) {
 }
 ```
 
+It is clearly visible from the recurrence relation that the coefficients of the
+Jacobi polynomials are indeed fractions of polynomials in `alpha` and `beta`. 
+But they actually are *polynomials* in `alpha` and `beta`. Actually I don't 
+know, this is a conjecture I made because I observed this fact for some small 
+values of `n`. We can check it with the function `hasPolynomialCoefficients`:
+
+```{r}
+JP <- JacobiPolynomial(7)
+hasPolynomialCoefficients(JP)
+```
+
 Up to a factor, the 
 [Gegenbauer polynomials](https://en.wikipedia.org/wiki/Gegenbauer_polynomials)
 with parameter `alpha` coincide with the Jacobi polynomials with parameters 
