--- a/README.Rmd
+++ b/README.Rmd
@@ -20,8 +20,8 @@ knitr::opts_chunk$set(echo = TRUE, collapse = TRUE, message = FALSE)
 ___
 
 These notes about the **symbolicQspray** package assume that the reader is a 
-bit familiar with the [**qspray** package](https://github.com/stla/qspray) 
-and the [**ratioOfQsprays** package](https://github.com/stla/ratioOfQsprays).
+bit familiar with the [**qspray** package][qspray] and with the 
+[**ratioOfQsprays** package][ratioOfQsprays].
 
 A `symbolicQspray` object represents a multivariate polynomial whose 
 coefficients are fractions of polynomials with rational coefficients. 
@@ -51,10 +51,9 @@ X3 <- Qlone(3)
 ```
 
 The fractions of polynomials such as the first coefficient `a1/(a2^2+1)` 
-in the above example are 
-[**ratioOfQsprays**](https://github.com/stla/ratioOfQsprays) objects, 
+in the above example are [**ratioOfQsprays**][ratioOfQsprays] objects, 
 and the numerator and the denominator of a `ratioOfQsprays` are 
-[**qspray**](https://github.com/stla/qspray) objects.
+[**qspray**][qspray] objects.
 
 Arithmetic on `symbolicQspray` objects is available:
 
@@ -84,7 +83,7 @@ X <- c(4, 3, "2/5")
 ```
 
 There is a discutable point here. A `symbolicQspray` object represents a 
-polynomial with `ratioOfQsprays` coefficients. So one can consider 
+polynomial with `ratioOfQsprays` coefficients. So one could consider 
 that the polynomial variables `X`, `Y` and `Z` represent some indeterminate
 `ratioOfQsprays` fractions, and that it should be possible to replace them 
 with `ratioOfQsprays` objects. However this is not allowed.
@@ -102,16 +101,13 @@ Now let's turn to our promised discussion. Why is replacing the values of the
 polynomial variables with some `ratioOfQsprays` objects not allowed?
 
 Actually my motivation to do this package was inspired by the 
-**Jack polynomials**. In the context of Jack polynomials, the variables 
+[**Jack polynomials**][jack]. In the context of Jack polynomials, the variables 
 `X`, `Y` and `Z` represent indeterminate *numbers*, and the coefficients 
 are *numbers depending on a parameter* (the Jack parameter), and it turns out 
 that they are fractions of polynomials of this parameter. 
 So I consider that a `symbolicQspray` is *not* a polynomial on the field 
 of fractions of polynomials: I consider it is a polynomial with 
 *rational coefficients depending on some parameters*. 
-
-By the way, I'm wondering whether I should rename `symbolicQspray` to 
-`parametricQspray`. Comments?..
 
 Also note that evaluating the `ratioOfQsprays` object 
 `evalSymbolicQspray(Qspray, X = X)` at `a` would make no sense if we took 
@@ -127,15 +123,16 @@ The package provides some functions to perform elementary queries on a
 numberOfVariables(Qspray)
 numberOfParameters(Qspray)
 numberOfTerms(Qspray)
-getCoefficient(Qspray, c(2, 1))
+getCoefficient(Qspray, c(2, 1)) # coefficient of X^2.Y
 getConstantTerm(Qspray)
 isUnivariate(Qspray)
 isConstant(Qspray)
 ```
 
+
 ## Transforming a `symbolicQspray`
 
-You can derivate a `symbolicQspray` polynomial:
+You can differentiate a `symbolicQspray` polynomial:
 
 ```{r}
 derivSymbolicQspray(Qspray, 2) # derivative w.r.t. Y
@@ -190,9 +187,9 @@ to use **symbolicQspray**.
 
 ## Application: Jacobi polynomials
 
-The [Jacobi polynomials](https://en.wikipedia.org/wiki/Jacobi_polynomials) 
-are univariate polynomials depending on two parameters that we will denote by
-`alpha` and `beta`. They are implemented in this package:
+The [Jacobi polynomials][jacobi] are univariate polynomials depending on two
+parameters that we will denote by `alpha` and `beta`. They are implemented in 
+this package:
 
 ```{r}
 JP <- JacobiPolynomial(2)
@@ -204,7 +201,7 @@ JP
 ```
 
 The implementation constructs these polynomials by using the 
-[recurrence relation](https://en.wikipedia.org/wiki/Jacobi_polynomials#Recurrence_relations).
+[recurrence relation][jacobirecurrence].
 This is a child game, one just has to copy the first two terms and this 
 recurrence relation:
 
@@ -245,12 +242,10 @@ JP <- JacobiPolynomial(7)
 hasPolynomialCoefficientsOnly(JP)
 ```
 
-Up to a factor, the 
-[Gegenbauer polynomials](https://en.wikipedia.org/wiki/Gegenbauer_polynomials)
-with parameter `alpha` coincide with the Jacobi polynomials with parameters 
-`alpha - 1/2` and `alpha - 1/2`. Let's derive them from the Jacobi polynomials,
-as an exercise. The factor can be implemented as follows (see Wikipedia for its 
-formula):
+Up to a factor, the [Gegenbauer polynomials][gegenbauer] with parameter `alpha`
+coincide with the Jacobi polynomials with parameters `alpha - 1/2` and 
+`alpha - 1/2`. Let's derive them from the Jacobi polynomials, as an exercise. 
+The factor can be implemented as follows (see Wikipedia for its formula):
 
 ```{r}
 risingFactorial <- function(theta, n) {
@@ -274,7 +269,8 @@ GegenbauerPolynomial <- function(n) {
 }
 ```
 
-Let's check the recurrence relation given in the Wikipedia article is fulfilled:
+Let's check that the recurrence relation given in the Wikipedia article is
+fulfilled:
 
 ```{r}
 n <- 5
@@ -288,8 +284,23 @@ X <- Qlone(1)
 
 ## Application to Jack polynomials
 
-The **symbolicQspray** package is used by the 
-[**jack** package](https://github.com/stla/jackR) to compute the Jack 
-polynomials with a symbolic Jack parameter. The Jack polynomials exactly fit to 
-the polynomials represented by the `symbolicQspray` objects: their coefficients 
-are fractions of polynomials by definition, of one variable: the Jack parameter.
+The **symbolicQspray** package is used in the [**jack** package][jack] to 
+compute the Jack polynomials with a symbolic Jack parameter. The Jack 
+polynomials exactly fit to the polynomials represented by the `symbolicQspray`
+objects: their coefficients are fractions of polynomials by definition, of one
+variable: the Jack parameter.
+
+
+<!-- -------------------- links -------------------- -->
+
+[qspray]: https://github.com/stla/qspray "the 'qspray' package on Github"
+
+[ratioOfQsprays]: https://github.com/stla/ratioOfQsprays "the 'ratioOfQsprays' package on Github"
+
+[jack]: https://github.com/stla/jackR "the 'jack' package on Github"
+
+[gegenbauer]: https://en.wikipedia.org/wiki/Gegenbauer_polynomials "Gegenbauer polynomials on Wikipedia"
+
+[jacobi]: https://en.wikipedia.org/wiki/Jacobi_polynomials "Jacobi polynomials on Wikipedia"
+
+[jacobirecurrence]: https://en.wikipedia.org/wiki/Jacobi_polynomials#Recurrence_relations "recurrence relation between Jacobi polynomials"
